# PersonDate

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_zh-CN.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  app.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_enrich_wechat_message_logs.py  0003_add_wechat_channel_tables_and_account_id.py  0004_day_plan_partial_unique_index.py  (+9 more)
backend/app/: bootstrap.py  main.py  wechat_channel_app.py  wechat_channel_main.py  wechat_channel_routes.py
backend/scripts/: create_test_reminder.py
backend/tests/: conftest.py  test_admin_users.py  test_agent_debug_flow.py  test_agent_debug_route.py  test_calendar_events_route.py  test_conflicts_route.py  test_daily_notification.py  test_health_and_auth.py  test_ilink_client.py  test_llm_client.py  test_me_settings.py  test_plan_items_route.py  test_push_msg.py  test_redis_fallback.py  test_reminder_service.py  test_reminder_worker.py  test_scheduled_items_route.py  test_scheduler_startup.py  test_security.py  test_system_settings.py  test_tasks_route.py  test_weather_route.py  test_web_agent_message_route.py  test_wechat_channel_adapter.py  test_wechat_channel_app.py  test_wechat_channel_client.py  test_wechat_channel_main.py  test_wechat_channel_management.py  test_wechat_channel_poller.py  test_wechat_channel_qr_routes.py  test_wechat_inbound.py  test_wechat_login_sessions.py  test_wechat_outbound.py
backend/wechat_channel/: __init__.py  ilink_client.py  poller.py
(+190 files in other folders)
