[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schedule-agent-backend"
version = "0.1.0"
description = "微信智能日程规划 Agent 后端"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "starlette>=0.40.0,<0.47.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "psycopg[binary]>=3.2.1",
  "argon2-cffi>=23.1.0",
  "passlib[bcrypt]>=1.7.4",
  "PyJWT>=2.9.0",
  "langgraph>=0.2.0",
  "openai>=1.40.0",
  "APScheduler>=3.10.4",
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
